[package]
name = "gitter"
version = "0.1.0"
authors = ["Daniel Rivas Perez <Daniel.Rivas@huddle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
surf = "2.0.0-alpha.4"
async-std = "1.6"
thiserror = "1.0"
anyhow = "1.0"
flate2 = "1.0"
futures = "0.3"
tar= "0.4"
serde={ version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-types = "2.4"
directories = "3.0.1"
